--- a/assets/scss/prism.scss
+++ b/assets/scss/prism.scss
@@ -23,6 +23,7 @@ pre[class*="language-"] {
 	@extend %font-hack;
   font-size: 1.3rem;
 	line-height: 1.6;
+  text-align: left;
 
 	white-space: pre-wrap;
 	word-spacing: normal;
