--- a/assets/scss/global.scss
+++ b/assets/scss/global.scss
@@ -1,21 +1,39 @@
 html {
-  @extend %font-nunito;
-  font-size: 10px;
-  color: $white;
   -ms-text-size-adjust: 100%;
   -webkit-text-size-adjust: 100%;
   -moz-osx-font-smoothing: grayscale;
   -webkit-font-smoothing: antialiased;
   box-sizing: border-box;
+  @extend %font-nunito;
+  font-size: 62.5%;
+  color: $white;
   position: relative;
-  background: linear-gradient(
-    0deg, $gray-dk 0%, darken($gray-dk, 8%) 100%);
-  background-repeat: no-repeat;
-  background-attachment: fixed;
+  z-index: 1;
+  &:before{
+    content: '';
+    width: 100vw;
+    height: 100vh;
+    position: fixed;
+    z-index: -1;
+    // background: linear-gradient( 150deg, $black 8%, $gray-dk 100% );
+    // background: linear-gradient( 150deg, $black 8%, darken($green, 8%) 100% );
+    // background: linear-gradient( 150deg, $black 8%, darken($blue, 4%) 100% );
+    // background: linear-gradient( 150deg, $black 8%, darken($grape, 5%) 100% );
+    background: linear-gradient( 150deg, $black 8%, darken($plum, 6%) 100% );
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+    background-size: 100vw 100vh;
+  }
 }
 
 body {
-  font-size: 1.2rem;
+  position: relative;
+  z-index: 2;
+  font-size: 1.3rem;
+  padding: 0px;
+  margin: 0px;
+  margin: 0px;
+  border: 0px;
 }
 
 *,
@@ -25,11 +43,75 @@ body {
   margin: 0;
 }
 
-
+// --------------------------- Text
 h1 {
   @extend %font-milkshake;
+  font-weight: 300;
+  font-size: 6.4rem;
+  text-align: center;
+  color: $green-lt;
 }
 
+h2 {
+  font-weight: 400;
+  font-size: 2.2rem;
+  text-transform: none;
+  text-shadow: none;
+  letter-spacing: 0.02rem;
+  text-align: center;
+  text-shadow: 0.2rem 0.3rem 0rem $black;
+}
+
+hgroup {
+
+  margin-bottom: 1.5rem;
+}
+
+h3 {
+  font-weight: 300;
+  text-align: center;
+  text-transform: uppercase;
+  font-size: 3.6rem;
+  text-shadow: 0.2rem 0.3rem 0rem $black;
+}
+
+h4 {
+  font-weight: 800;
+  font-size: 2rem;
+}
+
+h5 {
+  font-weight: 700;
+  font-size: 1.5rem;
+  color: $yellow;
+  text-transform: uppercase;
+  letter-spacing: 0.02rem;
+  text-align: center;
+}
+
+h6,
+.h6 {
+  font-weight: 400;
+  font-size: 1.2rem;
+  color: $gray-md;
+  text-transform: uppercase;
+}
+
+p {
+  max-width: 82rem;
+  margin-bottom: 3rem;
+  line-height: 140%;
+  font-size: 1.6rem;
+
+  &[lg]{
+    font-size: 2.4rem;
+    line-hieght: 145%;
+  }
+
+  &[dk]{
+    color: $gray-dk;
+  }
+}
 
 a{
   color: $white;
@@ -54,7 +136,15 @@ a{
   }
 }
 
+ul,
+li {
+  list-style-type: none;
+}
 
+// --------------------------- Media
+img {
+  display: inline-block;
+}
 
 img[lazy='loaded'] {
   opacity: 0;
