Add Logo to Nav. Adjust link styles.

--- a/assets/scss/_var.scss
+++ b/assets/scss/_var.scss
@@ -8,7 +8,7 @@ $yellow:    #FEC52E;
 $green:     saturate( darken( #06A281, 5% ), 50% );
 $green-lt:  #19BA8A;
 $blue:      #004876;
-$blue-lt:   saturate( lighten( $blue, 15% ), 10%);
+$blue-lt:   #0086DB;
 $grape:     #272580;
 $grape-lt:  saturate( lighten( $grape, 32% ), 10%);
 $plum:      #602651;
