Move Prism CSS to single stylesheet

--- a/assets/scss/prism.scss
+++ b/assets/scss/prism.scss
@@ -1,3 +1,5 @@
+@import '_var.scss';
+
 /* PrismJS 1.15.0
 https://prismjs.com/download.html#themes=prism-coy&languages=markup+css+clike+javascript+bash+ruby+markup-templating+php+python+sass+scss&plugins=toolbar+unescaped-markup+normalize-whitespace+show-language */
 /**
