--- a/assets/scss/global.scss
+++ b/assets/scss/global.scss
@@ -9,6 +9,7 @@ html {
   color: $white;
   position: relative;
   z-index: 1;
+  background-color: $gray-dk;
   &:before{
     content: '';
     width: 100vw;
@@ -128,7 +129,7 @@ p {
       content: '';
       position: absolute;
       width: 100%;
-      height: 0.1rem;
+      height: 0.2rem;
       bottom: 0;
       left: 0;
     }
