Update Style Guide content

--- a/assets/scss/global.scss
+++ b/assets/scss/global.scss
@@ -92,6 +92,7 @@ h3 {
   text-transform: uppercase;
   font-size: 3.6rem;
   text-shadow: 0.2rem 0.3rem 0rem $black;
+  padding-top: 1rem;
 }
 
 h4 {
