--- a/assets/scss/global.scss
+++ b/assets/scss/global.scss
@@ -39,7 +39,7 @@ html {
 body {
   position: relative;
   z-index: 2;
-  font-size: 1.6rem;
+  font-size: 1.8rem;
   padding: 0px;
   margin: 0px;
   margin: 0px;
@@ -138,6 +138,7 @@ a{
   ul &,
   p & {
     color: $white;
+    font-weight: 600;
 
     &:before,
     &:after {
@@ -150,11 +151,11 @@ a{
     }
 
     &:before {
-      background: rgba($green, .8);
+      background: rgba($blue-lt, .5);
     }
 
     &:after {
-      background: $green-lt;
+      background: $blue-lt;
       transform: scaleX(0);
       transform-origin: bottom center;
       transition: transform $fade;
