Update Project format

--- a/assets/scss/global.scss
+++ b/assets/scss/global.scss
@@ -131,7 +131,12 @@ p {
   }
 }
 
-a{
+.nowrap {
+  display: inline-block;
+  word-wrap: nowrap;
+}
+
+a {
   text-decoration: none;
   position: relative;
 
